force-app/main/default/objects/Apttus_Approval__Approval_Request__c/Apttus_Approval__Approval_Request__c.object-meta.xml
<CustomObject>
    <description>Designates an approval request created from an approval process</description>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>