force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Action__c</fullName>
    <formula>IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,"Assigned"),ISPICKVAL(Apttus_Approval__Approval_Status__c,"Reassigned")),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name="System Administrator",$Profile.Name="Apttus Standard User")),HYPERLINK("/apex/Apttus_Approval__ApprovalSummaryLaunch?id="&amp;Id&amp;"&amp;pageMode=reassign","Reassign"&amp;BR(),"_top"),NULL)
&amp;
IF(AND(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,"Assigned"),ISPICKVAL(Apttus_Approval__Approval_Status__c,"Reassigned")),OR(OwnerId=$User.Id,Apttus_Approval__PrevAssignedToId__c=$User.Id,Apttus_Approval__DelegateApprover__c=$User.Id,$Profile.Name="System Administrator",$Profile.Name="Apttus Standard User")),HYPERLINK("/apex/Apttus_Approval__ApprovalSummaryLaunch?id="&amp;Id&amp;"&amp;pageMode=approveReject","Approve / Reject"&amp;BR(),"_top"),NULL)
&amp;
IF(OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,"Assigned"),ISPICKVAL(Apttus_Approval__Approval_Status__c,"Reassigned")),HYPERLINK("/apex/Apttus_Approval__ApprovalSummaryLaunch?id="&amp;Id&amp;"&amp;pageMode=addComment","Add Comment"&amp;BR(),"_top"),NULL)
&amp;
IF(AND(Apttus_Approval__CanEscalate__c,OR(ISPICKVAL(Apttus_Approval__Approval_Status__c,"Assigned"),ISPICKVAL(Apttus_Approval__Approval_Status__c ,"Reassigned")),OR(Apttus_Approval__Initial_Submitter__c=$User.Id,$Profile.Name="System Administrator")),HYPERLINK("/apex/Apttus_Approval__ApprovalRequestEscalate?id="&amp;Id,"Escalate","_top"),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Action</label>
    <type>Text</type>
</CustomField>