force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Action_Approve_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Action_Approve_Id__c</fullName>
    <defaultValue>"00b70000000xoxK"</defaultValue>
    <label>Action Approve Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>