force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__ActualApproverName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ActualApproverName__c</fullName>
    <description>The Actual Approver Name</description>
    <formula>Apttus_Approval__Actual_Approver__r.FirstName &amp; ' ' &amp; Apttus_Approval__Actual_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Approver Name</label>
    <type>Text</type>
</CustomField>