force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Assigned_To_Link__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assigned_To_Link__c</fullName>
    <formula>IF (ISPICKVAL(Apttus_Approval__Assigned_To_Type__c,"Queue"),
HYPERLINK("/p/own/Queue/d?id="&amp;Apttus_Approval__Assigned_To_Id__c&amp;"&amp;setupid=Queues",Apttus_Approval__Assigned_To_Name__c,"_top"),HYPERLINK(Apttus_Approval__Assigned_To_Id__c,Apttus_Approval__Assigned_To_Name__c,"_top"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>