force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__Status_Link__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Status_Link__c</fullName>
    <formula>HYPERLINK(Id,
CASE(Apttus_Approval__Approval_Status__c,
"Not Submitted","Not Submitted",
"Notified","Notified",
"Submitted","Submitted",
"Assigned","Assigned",
"Reassigned","Reassigned",
"Approved","Approved",
"Rejected","Rejected",
"Cancelled","Cancelled",
"On Hold","On Hold", 
"None"),
"_top"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>