force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__StepNameLink__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepNameLink__c</fullName>
    <formula>IF (OR(ISPICKVAL(Apttus_Approval__Approval_Status__c ,"Assigned"),ISPICKVAL(Apttus_Approval__Approval_Status__c ,"Reassigned")), HYPERLINK("/apex/Apttus_Approval__ApprovalSummaryLaunch?Id="&amp;Id&amp;"&amp;pageMode=approveReject", Apttus_Approval__Step_Name__c, "_top"), Apttus_Approval__Step_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step</label>
    <type>Text</type>
</CustomField>