force-app/main/default/objects/Apttus_Approval__Approval_Request__c/fields/Apttus_Approval__SubmissionComment2__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubmissionComment2__c</fullName>
    <description>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the "Submission Comment 2 Label" field in the related approval process definition.</description>
    <inlineHelpText>A second comment entered by the submitter when the request was submitted.  The comment label is specified by the "Submission Comment 2 Label" field in the related approval process definition.</inlineHelpText>
    <label>Submission Comment 2</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>